// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaneContainerComponent test should be resize if notification console is expanded 1`] = `
<StyledPanelBase
  className="themed-panel"
  closeButtonAriaLabel="Close test"
  customWidth="440px"
  data-test="Panel:test"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    {
      "height": "516px",
    }
  }
  styles={
    {
      "closeButton": {
        "color": "var(--colorNeutralForeground1)",
      },
      "commands": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
        "padding": 0,
      },
      "footerInner": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
      },
      "header": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
        "padding": "0 0 8px 34px",
      },
      "main": {
        "backgroundColor": "var(--colorNeutralBackground1)",
      },
      "navigation": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "borderBottom": "1px solid var(--colorNeutralStroke1)",
        "color": "var(--colorNeutralForeground1)",
      },
      "overlay": {
        "backgroundColor": "var(--overlayBackground)",
      },
      "root": {},
      "scrollableContent": {
        "backgroundColor": "var(--colorNeutralBackground1)",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;

exports[`PaneContainerComponent test should not render console with panel 1`] = `
<StyledPanelBase
  className="themed-panel"
  closeButtonAriaLabel="Close test"
  customWidth="440px"
  data-test="Panel:test"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    {
      "height": "768px",
    }
  }
  styles={
    {
      "closeButton": {
        "color": "var(--colorNeutralForeground1)",
      },
      "commands": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
        "padding": 0,
      },
      "footerInner": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
      },
      "header": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
        "padding": "0 0 8px 34px",
      },
      "main": {
        "backgroundColor": "var(--colorNeutralBackground1)",
      },
      "navigation": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "borderBottom": "1px solid var(--colorNeutralStroke1)",
        "color": "var(--colorNeutralForeground1)",
      },
      "overlay": {
        "backgroundColor": "var(--overlayBackground)",
      },
      "root": {},
      "scrollableContent": {
        "backgroundColor": "var(--colorNeutralBackground1)",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;

exports[`PaneContainerComponent test should render nothing if content is undefined 1`] = `<Fragment />`;

exports[`PaneContainerComponent test should render with panel content and header 1`] = `
<StyledPanelBase
  className="themed-panel"
  closeButtonAriaLabel="Close test"
  customWidth="440px"
  data-test="Panel:test"
  headerClassName="panelHeader"
  headerText="test"
  isFooterAtBottom={true}
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
  style={
    {
      "height": "736px",
    }
  }
  styles={
    {
      "closeButton": {
        "color": "var(--colorNeutralForeground1)",
      },
      "commands": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "marginTop": 8,
        "paddingTop": 0,
      },
      "content": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
        "padding": 0,
      },
      "footerInner": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
      },
      "header": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "color": "var(--colorNeutralForeground1)",
        "padding": "0 0 8px 34px",
      },
      "main": {
        "backgroundColor": "var(--colorNeutralBackground1)",
      },
      "navigation": {
        "backgroundColor": "var(--colorNeutralBackground1)",
        "borderBottom": "1px solid var(--colorNeutralStroke1)",
        "color": "var(--colorNeutralForeground1)",
      },
      "overlay": {
        "backgroundColor": "var(--overlayBackground)",
      },
      "root": {},
      "scrollableContent": {
        "backgroundColor": "var(--colorNeutralBackground1)",
      },
    }
  }
  type={7}
>
  <div />
</StyledPanelBase>
`;
